--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -88,7 +88,7 @@ body {
 
   h3 {
 	font-family: "Rock Salt", cursive;
-	font-size: small;
+	font-size: x-small;
   }
 
 }
@@ -151,8 +151,7 @@ body {
 }
 
 .logo {
-  float: left;
   height: 75%;
   width: 75%;
-  margin-left: 20px;
+  bottom: 0;
 }
