Adds rich text editors to test messages detail fields

--- a/client/admin/templates/test-messages.html
+++ b/client/admin/templates/test-messages.html
@@ -13,8 +13,7 @@
       </div>
       <div class="form-group" show-errors>
         <label class="control-label" for="satDetail">SAT Detail:</label>
-        <textarea ng-model="data.satDetail" class="form-control" name="satDetail"
-                  id="satDetail" rows="3" required></textarea>
+        <div class=text-editor" name="satDetail" text-angular ng-model="data.satDetail" required></div>
       </div>
       <div class="form-group" show-errors>
         <label class="control-label" for="actMessage">ACT Message:</label>
@@ -23,8 +22,7 @@
       </div>
       <div class="form-group" show-errors>
         <label class="control-label" for="actDetail">ACT Detail:</label>
-        <textarea ng-model="data.actDetail" class="form-control" name="actDetail"
-                  id="actDetail" rows="3" required></textarea>
+        <div class=text-editor" name="actDetail" text-angular ng-model="data.actDetail" required></div>
       </div>
       <div class="form-group" show-errors>
         <label class="control-label" for="testCategory">Testing Category:</label>
