--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1,6 +1,7 @@
 //colors
 $gray: #808080;
 $green: #66C285;
+$rust: hsla(18, 60%, 35%, 1);
 
 //fonts
 $font_0: Glyphicons Halflings;
@@ -13,7 +14,6 @@ body {
 	padding: 0;
 }
 
-
 [ng-cloak] {
 	display: none !important;
 }
@@ -22,19 +22,8 @@ body {
 	display: none !important;
 }
 
-.panel-heading {
-
-	h3:after {
-		font-family: $font_0;
-		content: "\e114";
-		float: right;
-		color: $gray;
-	}
-
-	&.collapsed h3:after {
-		content: "\e080";
-	}
-
+.text-alt {
+	color: $rust;
 }
 
 .fa-square-o {
@@ -70,6 +59,16 @@ body {
 	margin-bottom: 30px;
 }
 
+.nav-tabs.nav-centered > li, .nav-pills.nav-centered > li {
+    float:none;
+    display:inline-block;
+    *display:inline; /* ie7 fix */
+     zoom:1; /* hasLayout ie7 trigger */
+}
+
+.nav-tabs.nav-centered, .nav-pills.nav-centered {
+    text-align:center;
+}
 
 .root {
 
