Adds new January 1st and May 1st timeframes

--- a/client/admin/templates/reminders-edit.html
+++ b/client/admin/templates/reminders-edit.html
@@ -25,6 +25,8 @@
       </label>
       <select ng-model="data.timeframes" multiple class="form-control" id="time-frame" name="time-frame" required>
         <option value="summer">Summer</option>
+        <option value="jan1">January 1st</option>
+        <option value="may1">May 1st</option>
         <option value="90">90 Days</option>
         <option value="60">60 Days</option>
         <option value="30">30 Days</option>
