--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -160,8 +160,8 @@ body {
 }
 
 // Animations for reminders
-.ng-enter,
-.ng-leave
+.reminders.ng-enter,
+.reminders.ng-leave
 {
     -webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
     -moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
@@ -172,15 +172,15 @@ body {
     display: block;
 }
 
-.ng-enter.ng-enter-active,
-.ng-leave {
+.reminders.ng-enter.ng-enter-active,
+.reminders.ng-leave {
     opacity: 1;
     top: 0;
     height: 30px;
 }
 
-.ng-leave.ng-leave-active,
-.ng-enter {
+.reminders.ng-leave.ng-leave-active,
+.reminders.ng-enter {
     opacity: 0;
     top: -50px;
     height: 0px;
