Adjusted header to be flush with panelbox

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -48,6 +48,7 @@ body {
   @media (min-width: $bootstrap-md) {
 
     .large-logo {
+      max-width: 100%;
       width: $large-logo-width;
       display: inline;
     }
