--- a/client/public/templates/main.html
+++ b/client/public/templates/main.html
@@ -25,22 +25,26 @@
           </div>
           <div class="reminder-btn-group">
             <div class="row">
-              <div class="col-md-6 col-md-push-6 center">
+              <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 center">
                 <button id="reminderSubmit" type="submit" ng-click="getReminders(formData)"
                        class="btn" ng-class="reminderForm.$invalid ? 'btn-default' : 'btn-primary'"
-                       ng-disabled="reminderForm.$invalid">Get My Reminders!</button>
+                       ng-disabled="reminderForm.$invalid"
+                       ng-hide="reminders.length > 0">Get My Reminders!</button>
               </div>
-              <div class="col-md-6 col-md-pull-6 center">
+              <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 center">
                 <button type="button" onClick="window.print()" class="btn"
                       ng-class="!reminders.length > 0 ? 'btn-default' : 'btn-primary'"
-                      ng-disabled="!reminders.length > 0"><i class="fa fa-print"></i> Print This Page </button>
+                      ng-hide="!reminders.length > 0"><i class="fa fa-print"></i> Print This Page </button>
               </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6 center">
+              <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 center">
                 <button type="button" ng-click="downloadReminders()" class="btn"
                       ng-class="!reminders.length > 0 ? 'btn-default' : 'btn-primary'"
-                      ng-disabled="!reminders.length > 0"><i class="fa fa-save"></i> Download iCal </button>
+                      ng-hide="!reminders.length > 0"><i class="fa fa-save"></i> Download iCal </button>
+              </div>
+              <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 center">
+                <button type="button" ng-click="clearReminders()" class="btn"
+                      ng-class="!reminders.length > 0 ? 'btn-default' : 'btn-danger'"
+                      ng-hide="!reminders.length > 0"><i class="fa fa-trash-o"></i> Restart </button>
               </div>
             </div>
           </div>
