style changes for restart button

--- a/client/public/templates/main.html
+++ b/client/public/templates/main.html
@@ -43,8 +43,8 @@
               </div>
               <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 center">
                 <button type="button" ng-click="clearReminders()" class="btn"
-                      ng-class="!reminders.length > 0 ? 'btn-default' : 'btn-danger'"
-                      ng-hide="!reminders.length > 0"><i class="fa fa-trash-o"></i> Restart </button>
+                      ng-class="!reminders.length > 0 ? 'btn-default' : 'btn-info'"
+                      ng-hide="!reminders.length > 0"><i class="fa fa-refresh"></i> Restart </button>
               </div>
             </div>
           </div>
