--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -167,32 +167,84 @@ body {
 }
 
 // Animations for reminders
+.reminder-container {
+  min-height: 500px;
+}
 .reminders {
-  transition: 1s linear all;
+  -webkit-transition: max-height 1s ease-in-out;
+          transition: max-height 1s ease-in-out;
   overflow: hidden;
+  max-height: 1000px; }
+
+.reminders.ng-hide {
+  max-height: 478px;
 }
 
-.reminders.ng-enter,
-.reminders.ng-leave
-{
-  //transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-  position: relative;
-  display: block;
+.reminders.ng-hide-add {
+  animation:1s slideOutRight ease;
 }
 
-.reminders.ng-enter.ng-enter-active,
-.reminders.ng-leave {
-  opacity: 1;
-  top: 0;
-  max-height: 1000px;
+.reminders.ng-hide-remove {
+  animation:1s slideInLeft ease;
 }
 
-.reminders.ng-leave.ng-leave-active,
-.reminders.ng-enter {
-  opacity: 0;
-  top: -50px;
-  max-height: 0px;
+/* ANIMATIONS (FROM ANIMATE.CSS) ======================== */
+@keyframes slideInLeft {
+  from {
+    transform: translate3d(-200%, 0, 0);
+    visibility: visible;
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
+  }
 }
+
+.slideInLeft {
+  animation-name: slideInLeft;
+}
+
+@keyframes slideOutRight {
+  from {
+    transform: translate3d(0, 0, 0);
+  }
+
+  to {
+    visibility: hidden;
+    transform: translate3d(200%, 0, 0);
+  }
+}
+
+.slideOutRight {
+  animation-name: slideOutRight;
+}
+
+// .reminders {
+//   transition: 1s linear all;
+//   overflow: hidden;
+// }
+//
+// .reminders.ng-enter,
+// .reminders.ng-leave
+// {
+//   //transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+//   position: relative;
+//   display: block;
+// }
+//
+// .reminders.ng-enter.ng-enter-active,
+// .reminders.ng-leave {
+//   opacity: 1;
+//   top: 0;
+//   max-height: 1000px;
+// }
+//
+// .reminders.ng-leave.ng-leave-active,
+// .reminders.ng-enter {
+//   opacity: 0;
+//   top: -50px;
+//   max-height: 0px;
+// }
 
 .reminder-btn-group .btn {
   width: 100%;
@@ -213,10 +265,13 @@ body {
 		display: none;
 	}
 
-	.collapse {
-		display: block !important;
-		height: auto !important;
-	}
+  #github-text {
+    display: none;
+  }
+
+  #github-logo {
+    display: none;
+  }
 
 	div {
 		page-break-inside: avoid;
@@ -225,12 +280,4 @@ body {
 	.fa-square-o {
 		display: block;
 	}
-
-	.panel-heading.collapsed h3:after {
-		font-family: $font_0;
-		content: "\e114";
-		float: right;
-		color: $gray;
-	}
-
 }
