--- a/client/public/templates/main.html
+++ b/client/public/templates/main.html
@@ -33,6 +33,9 @@
               <button type="button" onClick="window.print()" class="btn"
                     ng-class="!reminders.length > 0 ? 'btn-default' : 'btn-primary'"
                     ng-disabled="!reminders.length > 0"><i class="fa fa-print"></i> Print This Page </button>
+              <button type="button" ng-click="exportToGoogleCalendar()" class="btn btn-default">
+                Export To Google Calendar
+              </button>
             </div>
           </div>
         </form>
