--- a/client/public/templates/main.html
+++ b/client/public/templates/main.html
@@ -39,21 +39,21 @@
               <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3 center">
                 <button type="button" ng-click="downloadReminders()"
                         class="btn btn-primary" ng-hide="!reminders.length > 0">
-                        <i class="fa fa-save"></i> Download iCal </button>
+                        <i class="fa fa-save"></i> Export Calendar </button>
               </div>
               <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3 center">
                 <button type="button" ng-click="exportToGoogleCalendar()"
                         ng-hide="exportStatus === 'complete' || !reminders.length > 0"
                         class="btn btn-primary">
                   <span ng-show="exportStatus === 'ready'">
-                    <i class="fa fa-calendar"></i> Send to Google Calendar
+                    <i class="fa fa-calendar"></i> Export to Google Calendar
                   </span>
                   <span ng-show="exportStatus === 'exporting'">
-                    Sending...
+                    Exporting...
                   </span>
                 </button>
                 <a href="https://www.google.com/calendar/" target="_blank" class="btn btn-primary"
-                   ng-show="exportStatus === 'complete'"> Sent! Click to Open </a>
+                   ng-show="exportStatus === 'complete'"> Exported! Click to Open </a>
               </div>
               <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3 center">
                 <button type="button" ng-click="saveAsPdf()"
