Adds schools view

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -17,12 +17,11 @@ footer {
     margin: 5px;
   }
 
-  a {
+  a, .footer-links {
     color: white;
-    text-decoration: underline;
   }
 
-  .footer-links {
-    color: white;
+  a {
+    text-decoration: underline;
   }
 }
