--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,8 @@
 // fonts
-@import url(https://fonts.googleapis.com/css?family=PT+Sans+Narrow|Francois+One);
+@import url(https://fonts.googleapis.com/css?family=PT+Sans+Narrow|Francois+One|Marvel);
 
 @import 'variables';
 @import 'global';
 @import 'header';
+@import 'schools';
 @import 'footer';
