--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $bg-gray: #8a8a8a;
-$active-blue: rgba(52, 162, 219, 1);
+$active-blue: #34A2DB;
+$active-blue-dark: #4779F2;
 
 // Sizes:
 $footer-height: 80px;
