--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,8 @@
 @import url(https://fonts.googleapis.com/css?family=PT+Sans+Narrow|Francois+One|Marvel);
 
 @import 'variables';
+@import 'components';
 @import 'global';
 @import 'header';
-@import 'schools';
+@import 'school';
 @import 'footer';
