Adds ng-repeats for groupings on reminders view

--- a/src/styles/_school.scss
+++ b/src/styles/_school.scss
@@ -13,7 +13,7 @@ main.school-view {
     }
 
     h2, h3 {
-      font-family: 'Marvel', sans-serif;
+      font-family: $marvel;
       margin: 0;
     }
 
