--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,6 +1,6 @@
 body {
   background-color: $bg-gray;
-  font-family: 'PT Sans Narrow', sans-serif;
+  font-family: $pt-sans;
   font-size: 16px;
 }
 
