--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -10,7 +10,7 @@ header {
 
   h1 {
     text-align: center;
-    font-family: 'Francois One', sans-serif;
+    font-family: $francois-one;
   }
 
   img {
