Creates the first four onboarding steps for new users

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,8 @@ $active-blue: #34A2DB;
 $active-blue-dark: #4779F2;
 $heading-bg-blue: #357ebd;
 $heading-border-blue: #428bca;
+$onboarding-bg-blue: rgba(27, 18, 77, .85);
+$progress-green: #5cb85c;
 
 // Sizes:
 $footer-height: 80px;
