--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 @import 'components';
 @import 'global';
 @import 'header';
+@import 'onboarding';
 @import 'school';
 @import 'reminder';
 @import 'footer';
